frame/support/test/tests/pallet_ui/storage_ensure_span_are_ok_on_wrong_gen.stderr
error[E0277]: the trait bound `Bar: WrapperTypeDecode` is not satisfied
  --> tests/pallet_ui/storage_ensure_span_are_ok_on_wrong_gen.rs:10:12
   |
10 |     #[pallet::without_storage_info]
   |               ^^^^^^^^^^^^^^^^^^^^ the trait `WrapperTypeDecode` is not implemented for `Bar`
   |
   = help: the following other types implement trait `WrapperTypeDecode`:
             Arc<T>
             Box<T>
             Rc<T>
             frame_support::sp_runtime::sp_application_crypto::sp_core::Bytes
   = note: required for `Bar` to implement `Decode`
   = note: required for `Bar` to implement `FullCodec`
   = note: required for `frame_support::pallet_prelude::StorageValue<_GeneratedPrefixForStorageFoo<T>, Bar>` to implement `PartialStorageInfoTrait`

error[E0277]: the trait bound `Bar: EncodeLike` is not satisfied
  --> tests/pallet_ui/storage_ensure_span_are_ok_on_wrong_gen.rs:10:12
   |
10 |     #[pallet::without_storage_info]
   |               ^^^^^^^^^^^^^^^^^^^^ the trait `EncodeLike` is not implemented for `Bar`
   |
   = help: the following other types implement trait `EncodeLike<T>`:
             <&&T as EncodeLike<T>>
             <&T as EncodeLike<T>>
             <&T as EncodeLike>
             <&[(K, V)] as EncodeLike<BTreeMap<LikeK, LikeV>>>
             <&[(T,)] as EncodeLike<BTreeSet<LikeT>>>
             <&[(T,)] as EncodeLike<BinaryHeap<LikeT>>>
             <&[(T,)] as EncodeLike<LinkedList<LikeT>>>
             <&[T] as EncodeLike<Vec<U>>>
           and 281 others
   = note: required for `Bar` to implement `FullEncode`
   = note: required for `Bar` to implement `FullCodec`
   = note: required for `frame_support::pallet_prelude::StorageValue<_GeneratedPrefixForStorageFoo<T>, Bar>` to implement `PartialStorageInfoTrait`

error[E0277]: the trait bound `Bar: WrapperTypeEncode` is not satisfied
  --> tests/pallet_ui/storage_ensure_span_are_ok_on_wrong_gen.rs:10:12
   |
10 |     #[pallet::without_storage_info]
   |               ^^^^^^^^^^^^^^^^^^^^ the trait `WrapperTypeEncode` is not implemented for `Bar`
   |
   = help: the following other types implement trait `WrapperTypeEncode`:
             &T
             &mut T
             Arc<T>
             Box<T>
             Cow<'a, T>
             Rc<T>
             Vec<T>
             bytes::bytes::Bytes
           and 3 others
   = note: required for `Bar` to implement `Encode`
   = note: required for `Bar` to implement `FullEncode`
   = note: required for `Bar` to implement `FullCodec`
   = note: required for `frame_support::pallet_prelude::StorageValue<_GeneratedPrefixForStorageFoo<T>, Bar>` to implement `PartialStorageInfoTrait`

error[E0277]: the trait bound `Bar: TypeInfo` is not satisfied
  --> tests/pallet_ui/storage_ensure_span_are_ok_on_wrong_gen.rs:21:12
   |
21 |     #[pallet::storage]
   |               ^^^^^^^ the trait `TypeInfo` is not implemented for `Bar`
   |
   = help: the following other types implement trait `TypeInfo`:
             &T
             &mut T
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
           and 163 others
   = note: required for `Bar` to implement `StaticTypeInfo`
   = note: required for `frame_support::pallet_prelude::StorageValue<_GeneratedPrefixForStorageFoo<T>, Bar>` to implement `StorageEntryMetadataBuilder`

error[E0277]: the trait bound `Bar: WrapperTypeDecode` is not satisfied
  --> tests/pallet_ui/storage_ensure_span_are_ok_on_wrong_gen.rs:21:12
   |
21 |     #[pallet::storage]
   |               ^^^^^^^ the trait `WrapperTypeDecode` is not implemented for `Bar`
   |
   = help: the following other types implement trait `WrapperTypeDecode`:
             Arc<T>
             Box<T>
             Rc<T>
             frame_support::sp_runtime::sp_application_crypto::sp_core::Bytes
   = note: required for `Bar` to implement `Decode`
   = note: required for `Bar` to implement `FullCodec`
   = note: required for `frame_support::pallet_prelude::StorageValue<_GeneratedPrefixForStorageFoo<T>, Bar>` to implement `StorageEntryMetadataBuilder`

error[E0277]: the trait bound `Bar: EncodeLike` is not satisfied
  --> tests/pallet_ui/storage_ensure_span_are_ok_on_wrong_gen.rs:21:12
   |
21 |     #[pallet::storage]
   |               ^^^^^^^ the trait `EncodeLike` is not implemented for `Bar`
   |
   = help: the following other types implement trait `EncodeLike<T>`:
             <&&T as EncodeLike<T>>
             <&T as EncodeLike<T>>
             <&T as EncodeLike>
             <&[(K, V)] as EncodeLike<BTreeMap<LikeK, LikeV>>>
             <&[(T,)] as EncodeLike<BTreeSet<LikeT>>>
             <&[(T,)] as EncodeLike<BinaryHeap<LikeT>>>
             <&[(T,)] as EncodeLike<LinkedList<LikeT>>>
             <&[T] as EncodeLike<Vec<U>>>
           and 281 others
   = note: required for `Bar` to implement `FullEncode`
   = note: required for `Bar` to implement `FullCodec`
   = note: required for `frame_support::pallet_prelude::StorageValue<_GeneratedPrefixForStorageFoo<T>, Bar>` to implement `StorageEntryMetadataBuilder`

error[E0277]: the trait bound `Bar: WrapperTypeEncode` is not satisfied
  --> tests/pallet_ui/storage_ensure_span_are_ok_on_wrong_gen.rs:21:12
   |
21 |     #[pallet::storage]
   |               ^^^^^^^ the trait `WrapperTypeEncode` is not implemented for `Bar`
   |
   = help: the following other types implement trait `WrapperTypeEncode`:
             &T
             &mut T
             Arc<T>
             Box<T>
             Cow<'a, T>
             Rc<T>
             Vec<T>
             bytes::bytes::Bytes
           and 3 others
   = note: required for `Bar` to implement `Encode`
   = note: required for `Bar` to implement `FullEncode`
   = note: required for `Bar` to implement `FullCodec`
   = note: required for `frame_support::pallet_prelude::StorageValue<_GeneratedPrefixForStorageFoo<T>, Bar>` to implement `StorageEntryMetadataBuilder`
